--- a/client/my-app/src/view/Login/Login.css
+++ b/client/my-app/src/view/Login/Login.css
@@ -1,17 +1,25 @@
+
 .main-frame {
     width: 100%;
     height: 100vh;
+    text-align: center;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
+    background-image: url("../../../public/login_background.jpg"); /* 确保路径正确 */
+    background-size: cover; /* 让背景图片覆盖整个容器 */
+    background-position: center; /* 背景图片居中 */
+    opacity: 0.7;
 }
 
+
 .login-card {
+    align-content: center;
     width: 400px;
     padding: 30px;
     border-radius: 12px;
-    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .login-content h1 {
@@ -20,27 +28,6 @@
     margin-bottom: 10px;
 }
 
-.button-group {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
-    justify-content: space-between;
-}
-
-/* 错误提示 */
-.error-warn {
-    color: red;
-    font-size: 13px;
-    margin-top: -10px;
-    margin-bottom: 5px;
-    display: block;
-}
-
-.error-warn-input{
-    border-color: red;
-    box-shadow: 0 0 5px rgba(255, 0, 0, 0.2);
-}
 
 .form-item1{
     margin-bottom: 20px;
@@ -51,4 +38,5 @@
 
 .LoginButton {
     margin-bottom: 10px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
